--- a/navbar.css
+++ b/navbar.css
@@ -4,52 +4,87 @@
 }
 body
 {
-  background-image: url(Background.jpg);
+    background-image: url(img/Background.jpg);
 }
-@font-face {
-  font-family: montserrat;
-  src: url(Montserrat-Medium.ttf);
+@font-face 
+{
+    font-family: montserrat;
+    src: url(fonts/Montserrat-Medium.ttf);
 }
-
-.topnav {
-  display: flex;
-  justify-content: space-evenly;
-  padding-top: 20px;
-  padding-left: 52%;
-  padding-right: 5%;
-  background-color:rgb(0, 0, 0);
-  overflow: auto;
+@font-face
+{
+    font-family: montserrat-bold;
+    src: url(fonts/Montserrat-Bold.ttf)
 }
 
-.nav-element{
-  position: relative;
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left : 7px;
-  padding-right: 7px;
-  text-decoration: none;
-  font-size: 14px;
-  font-family: montserrat;
- 
+.topnav 
+{
+    display: flex;
+    align-content: flex-end;
+    padding-top: 50px;
+    background-color:rgb(0, 0, 0);
+    overflow: auto;
 }
 
+.name
+{
+    flex-grow: 1;
+    color: #f2f2f2;
+    position: relative;
+    float: left;
+    text-align: center;
+    text-decoration: none;
+    font-family: montserrat-bold;
+    font-size: 25px;
+}
+.space2
+{
+    position: relative;
+    flex-grow: 15;
+}
+.nav-element
+{
+    flex-grow: 1;
+    position: relative;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: montserrat;   
+}
+.space
+{
+    position: relative;
+    flex-grow: 3;
+}
 .nav-element::after
 {
-  content: '';
-  position: relative;
-  width: 0; height: 3px;
-  display: block;
-  margin-top: 5px;
-  left: 0;
-  background: #fff;
-  transition: width 0.8s ease;
+    content: '';
+    position: relative;
+    width: 0; height: 3px;
+    display: block;
+    margin-top: 5px;
+    margin-left: 20px;
+    left: 0;
+    background: #fff;
+    transition: width 0.8s ease;
 }
 
 .nav-element:hover::after
 {
-  left : 0;
-  width: 80%;
+    left : 0;
+    width: 50%;
+}
+
+.current::after
+{
+    content: '';
+    position: relative;
+    width: 50%; height: 3px;
+    display: block;
+    margin-top: 5px;
+    margin-left: 20px;
+    left: 0;
+    background: #fff;
 }
