--- a/navbar.css
+++ b/navbar.css
@@ -22,7 +22,7 @@ body
     display: flex;
     align-content: flex-end;
     padding-top: 50px;
-    background-color:rgb(0, 0, 0);
+    background-color:rgb(0, 0, 0); // Make it transparent for different backgrounds
     overflow: auto;
 }
 
