--- a/navbar.css
+++ b/navbar.css
@@ -6,7 +6,7 @@ body
 {
     background-image: url(img/Background.jpg);
 }
-@font-face 
+@font-face /* This is for loading the font; Giving the name monserrat and load the font from given location*/
 {
     font-family: montserrat;
     src: url(fonts/Montserrat-Medium.ttf);
@@ -22,8 +22,12 @@ body
     display: flex;
     align-content: flex-end;
     padding-top: 50px;
-    background-color:rgb(0, 0, 0); /*Make it transparent for different backgrounds*/
+    background-color:rgb(0, 0, 0);
     overflow: auto;
+}
+.nav-link
+{
+    color:#f2f2f2;
 }
 
 .name
@@ -65,26 +69,43 @@ body
     width: 0; height: 3px;
     display: block;
     margin-top: 5px;
-    margin-left: 20px;
+    margin-left: 5px; 
     left: 0;
-    background: #fff;
+    background:black;
     transition: width 0.8s ease;
 }
 
 .nav-element:hover::after
 {
     left : 0;
-    width: 50%;
+    width: 100%;
 }
 
 .current::after
 {
     content: '';
     position: relative;
-    width: 50%; height: 3px;
+    width: 100%; height: 3px;
     display: block;
     margin-top: 5px;
-    margin-left: 20px;
+    /* margin-left: 5px;  */
     left: 0;
-    background: #fff;
+    background:black;
 }
+
+div.container6 
+{
+    height: 10em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration-color: #f2f2f2;
+    position: relative;
+    vertical-align: center;
+
+}
+div.container6 p 
+{
+    margin: 0 
+}
+
