--- a/navbar.css
+++ b/navbar.css
@@ -25,9 +25,13 @@ body
     background-color:rgb(0, 0, 0);
     overflow: auto;
 }
-.nav-link2
+.navbar-brand
 {
-    color:#f2f2f2;
+    color: white !important;
+}
+.nav-link
+{
+    color:#f2f2f2 !important;
 }
 
 .name
@@ -71,7 +75,7 @@ body
     margin-top: 5px;
     margin-left: 5px; 
     left: 0;
-    background:black;
+    background:white;
     transition: width 0.8s ease;
 }
 
@@ -90,7 +94,7 @@ body
     margin-top: 5px;
     /* margin-left: 5px;  */
     left: 0;
-    background:black;
+    background:white;
 }
 
 div.container6 
