--- a/navbar.css
+++ b/navbar.css
@@ -28,10 +28,12 @@ body
 .navbar-brand
 {
     color: white !important;
+    font-family: montserrat-bold !important;
 }
 .nav-link
 {
     color:#f2f2f2 !important;
+    font-family: montserrat !important;
 }
 
 .name
