--- a/css/navbar.css
+++ b/css/navbar.css
@@ -21,6 +21,13 @@ html
     width: 100vw;
     overflow: auto;
 }
+#register
+{
+    background-color: red;
+    height: 100vh;
+    width: 100vw;
+    overflow: auto; 
+}
 #contact
 {
     background-color: gainsboro;
