--- a/css/home.css
+++ b/css/home.css
@@ -32,7 +32,7 @@
 
 #home h2 {
     color: #fff;
-    margin-bottom: 50px;
+    margin-top: 15px;
     font-size: 24px;
 }
   
@@ -46,7 +46,7 @@
     padding: 8px 28px;
     border-radius: 50px;
     transition: 0.5s;
-    margin: 10px;
+    /* margin: 10px; */
     border: 2px solid #fff;
     color: #fff;
   }
