--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
 /* HOME SECTION */
 #home
 {
-      background-image: url(../img/Background.jpg );
+      background-image: url(../img/daniel-von-appen-QUHlPs4y8PQ-unsplash.jpg );
       height: 100vh;
       width: 100vw;
       overflow: auto;
@@ -52,8 +52,8 @@
   }
   
 #home .btn-get-started:hover {
-    background: rgb(97, 13, 97);
-    border: 2px solid rgb(97, 13, 97); /* When you hover the size shouldnt change*/ 
+    background: url("../img/button.jpg");
+    border: 2px solid rgb(63, 49, 46); /* When you hover the size shouldnt change*/ 
     text-transform:uppercase; 
     text-decoration: none;   
 }
