--- a/css/about.css
+++ b/css/about.css
@@ -12,3 +12,24 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.row1
+{
+    display:flex;
+    flex-direction: row;
+    flex-grow:25;
+}
+.column1
+{
+    flex:50%;
+}
+.outer
+{
+    /* height:400px; */
+    background-color:rgba(255, 115, 0, 0.479);
+    flex-grow: 50;
+}
+.block1
+{
+    display:flex;
+    flex-direction: column;
+}
