--- a/css/contact.css
+++ b/css/contact.css
@@ -12,12 +12,12 @@
 .space-contact
 {
     position: relative;
-    flex-grow: 5;
+    flex-grow: 3;
 }
 .space-contact2
 {
     position: relative;
-    flex-grow: 3;
+    flex-grow: 2;
 }
 #contact .contact-container
 {
@@ -28,21 +28,16 @@
     justify-content: center;
     align-items: left;
     text-align: left;
-    flex-grow: 9;
+    flex-grow: 3;
 }
 
-.image-box
+iframe
 {
     position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: center;
-    flex-grow: 9;
+    flex-grow: 3;
     margin-top: 220px;
     margin-bottom: 175px;
     border-radius: 15px;
-    background-color: white;
 }
 
 #contact-fields
