--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,11 @@
+.contact-bg
+{
+    background-image: url(../img/lukas-ter-poorten-paAJDCYNq-0-unsplash.jpg);
+}
 #contact
 {
     position: relative;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.534);
     height: 100vh;
     width: 100vw;
     overflow: auto;
