--- a/css/home.css
+++ b/css/home.css
@@ -21,7 +21,7 @@
 }
   
 #home h1 {
-    margin: 30px 0 10px 0;
+    margin: 30px 0 15px 0;
     font-size: 48px;
     font-weight: 700;
     line-height: 56px;
@@ -56,4 +56,8 @@
     border: 2px solid rgb(63, 49, 46); /* When you hover the size shouldnt change*/ 
     text-transform:uppercase; 
     text-decoration: none;   
+}
+
+.type{
+  color: #fff !important;
 }
