Flipping error to be fixed

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -20,7 +20,7 @@ html
 }
 #services
 {
-    background-color: blue;
+    background-color: black;
     height: 100vh;
     width: 100vw;
     overflow: auto;
