--- a/css/services.css
+++ b/css/services.css
@@ -4,7 +4,54 @@ div.services-container{
     margin-top: 80px;
 
 }
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
 
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 25px;
+}
+
+.flip-card-front {
+  background-color:blue;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: #2980b9;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.booknow{
+  background-color: white;
+  font-size: 20;
+  color: black;
+  border-radius: 25px;
+  border-width: 2px;
+  border-color: #2980b9;
+}
+/*
 .flipCard-cleaning, .flipCard-cooking, .flipCard-washing {
     perspective: 800;
     width: 400px;
@@ -49,8 +96,8 @@ div.services-container{
     color: black;
     padding-top: 50px;
     font-family: Georgia;
-    font-size: 2em;
-  }
+    font-size: 2em;    
+  }  */
 /*.services-cleaning-container{
     perspective: 800;
     margin:55px;
