--- a/css/services.css
+++ b/css/services.css
@@ -6,9 +6,10 @@ div.services-container{
 }
 .flip-card {
   background-color: transparent;
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   perspective: 1000px;
+  margin:55px; 
 }
 
 .flip-card-inner {
@@ -43,122 +44,27 @@ div.services-container{
   transform: rotateY(180deg);
 }
 
+.btn-container{
+  text-align: center;
+  margin-left: -100px;
+}
+
 .booknow{
+  position: absolute;
   background-color: white;
   font-size: 20;
   color: black;
   border-radius: 25px;
   border-width: 2px;
   border-color: #2980b9;
-}
-/*
-.flipCard-cleaning, .flipCard-cooking, .flipCard-washing {
-    perspective: 800;
-    width: 400px;
-    height: 400px;
-    position: relative;
-    
-  }
-  .flipCard .card.flipped {
-    transform:rotatey(-180deg);
-  }
-  .flipCard .card {
-    transform-style: preserve-3d;
-    transition: 0.5s;
-    
-  }
-  .flipCard .card .side {
-    border-radius: 30px;
-    width: 400px;
-    height: 400px;
-    padding: 10px;
-    cursor: pointer;
-    position: absolute;
-    backface-visibility: hidden;
-    
-  }
-  .flipCard .card .back {
-    color: black;
-    transform:rotatey(-180deg);
-  }  
-  
-  .flipCard .card .front {
-    font-family: Georgia;
-    font-size: 3em;
-    text-align: center;
-    background-color: blue;
-    color:white;
-  
-  }
-  .flipCard .card .back {
-    background-color: #dbb2f9;
-    text-align: center;
-    color: black;
-    padding-top: 50px;
-    font-family: Georgia;
-    font-size: 2em;    
-  }  */
-/*.services-cleaning-container{
-    perspective: 800;
-    margin:55px;
-    margin-top: 200px;
-    width:400px;  height:400px; 
-    border-radius: 30px;
-    padding:10px;
-    transition-duration: 2s;
-}
-.services-cleaning-container .card.flipped{
-    transform:rotatey(-180deg);
-}
-.services-cleaning-container .card{
-    transform-style:preserve-3d;
-    transition: 0.5s;
-}
-.services-cleaning-container .card .side{
-    cursor: pointer;
-    backface-visibility: hidden;
-    overflow: auto;
-}
-.services-cleaning-container .card .side.back {
-    background-color:blue;
-    color: white;
-}
-.services-cleaning-container .card .side.front {
-    background-color: blue;
-    color: black;
-  }
-
-  */
-  
-/*.services-cleaning-container .card .back {
-    background-color:blue;
-    color: white;
-}   */
-/*#services-cleaning-container:hover{
-    margin:55px;
-    margin-top: 200px;
-    width:400px;  height:400px; 
-    border-radius: 30px;
-    transform: rotateY(180deg);
-}  */
-#services-cooking{
-    margin:55px;
-    margin-top: 200px;
-    color:blueviolet;
-    width:400px;  height:400px; 
-    background-color: blue;
-}
-#services-washing{
-    margin:55px;
-    margin-top: 200px;
-    color:blueviolet;
-    width:400px;  height:400px; 
-    background-color: blue;
+  bottom: 20px; 
 }
 
 .image-container{
-    text-align: center;
+  margin-top: 25px;
+  text-align: center;
 }
 img.services-imgs{
     border-radius: 50%; 
+    width:150px; height:150px;
 }
