--- a/css/services.css
+++ b/css/services.css
@@ -1,49 +1,51 @@
+/*#services{
+  background: url("../img/services-bg.jpg");
+  background-size:100%; 
+} */
+
 div.services-container{
     display:inline-flex;
     margin:55px;
     margin-top: 80px;
 
 }
-.flip-card {
-  background-color: transparent;
+.card-container {
+  position: relative;
   width: 350px;
   height: 350px;
-  perspective: 1000px;
   margin:55px; 
-}
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  background-color: blue;
   text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
+  border-radius: 25px;
 }
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
+.overlay {
   position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #FFFFFF;
+  overflow: hidden;
   width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
+  height: 0;
+  transition: .8s ease;
   border-radius: 25px;
 }
 
-.flip-card-front {
-  background-color:blue;
+.card-container:hover .overlay {
+  height: 100%;
+}
+
+.text {
   color: black;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
-.flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
-}
-
+/*
 .btn-container{
   text-align: center;
   margin-left: -100px;
@@ -58,7 +60,7 @@ div.services-container{
   border-width: 2px;
   border-color: #2980b9;
   bottom: 20px; 
-}
+}*/
 
 .image-container{
   margin-top: 25px;
