--- a/css/login.css
+++ b/css/login.css
@@ -2,7 +2,7 @@ body
 {
 	margin:0;
 	padding:0;
-	background:url(/img/Background.jpg); 
+	background:url(../img/Background.jpg); 
 	font-family:sans-serif;
 
 }
