--- a/css/signup.css
+++ b/css/signup.css
@@ -26,7 +26,7 @@ label.labels{
     
     
 }
-#name,#email,#type,#houseno,#helper-name,#community-name,#worktype-dropdown{
+#name,#email,#type,#houseno,#helper-name,#community-name,#worktype-dropdown,#password{
     border-color: white;
     font-size: 16;
     width:400px;
