--- a/css/signup.css
+++ b/css/signup.css
@@ -34,7 +34,7 @@ label.labels{
     padding-right: 10px;
     font-family: montserrat;
     background-color: transparent;
-    
+    color: white;
 }   
 
 #register-button{
