--- a/css/contact.css
+++ b/css/contact.css
@@ -2,6 +2,12 @@
 {
     background-image: url(../img/lukas-ter-poorten-paAJDCYNq-0-unsplash.jpg);
 }
+
+#title
+{
+    font-size: 13pt;
+}
+
 #contact
 {
     position: relative;
