--- a/css/register.css
+++ b/css/register.css
@@ -1,6 +1,6 @@
 .register-bg
 {
-    background-image: url(../img/lukas-ter-poorten-paAJDCYNq-0-unsplash.jpg);
+    background-image: url(../img/register.jpg);
 }
 
 #title
@@ -14,7 +14,7 @@
 #register
 {
     position: relative;
-    background-color: rgba(0, 0, 0, 0.534);
+    /* background-color: rgba(0, 0, 0, 0.534); */
     height: 100vh;
     width: 100vw;
     overflow: auto;
@@ -41,18 +41,19 @@
     justify-content: center;
     align-items: left;
     text-align: left;
-    flex-grow: 4;
+    flex-grow: 10;
 }
 
-iframe
+#image
 {
     position: relative;
     flex-grow: 3;
     margin-top: 160px;
     margin-bottom: 175px;
     border-radius: 15px;
+    height: 375px;
+    width: 375px;
 }
-
 #register-fields
 {
     display: flex;
